buy after sell (during handle same candle)
(cherry picked from commit 51cea36e018b4b681fc6a5fde5aa7f20247f6fd8)